--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -8,8 +8,8 @@
     android:background="@color/mainBlue"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/LoginButton"
+    <androidx.appcompat.widget.AppCompatButton
+    android:id="@+id/LoginButton"
         android:layout_width="200dp"
         android:layout_height="45dp"
         android:background="@color/itemBlue"
@@ -19,8 +19,8 @@
         tools:layout_editor_absoluteX="105dp"
         tools:layout_editor_absoluteY="400dp" />
 
-    <Button
-        android:id="@+id/RegisterButton"
+    <androidx.appcompat.widget.AppCompatButton
+    android:id="@+id/RegisterButton"
         android:layout_width="200sp"
         android:layout_height="45dp"
         android:background="@color/itemBlue"
