--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="213dp"
-        android:layout_height="218dp"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -121,11 +121,13 @@
     <!-- 0806 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/fish_gif"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/fish_gif"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
 </RelativeLayout>
