--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
@@ -9,47 +9,69 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatButton
-    android:id="@+id/LoginButton"
+        android:id="@+id/LoginButton"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="420dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="350dp"
         android:background="@color/itemBlue"
-        android:gravity="center"
         android:text="登入"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="400dp" />
+        android:textSize="18sp" />
 
     <androidx.appcompat.widget.AppCompatButton
-    android:id="@+id/RegisterButton"
+        android:id="@+id/RegisterButton"
         android:layout_width="200sp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="470dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="300dp"
         android:background="@color/itemBlue"
-        android:gravity="center"
         android:text="註冊"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="460dp" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/AccountInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="500dp"
         android:ems="10"
         android:inputType="text"
         android:text="帳號"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="250dp" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/PasswordInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="440dp"
         android:ems="10"
         android:inputType="text"
         android:text="密碼"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="300dp" />
+        android:textSize="18sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
