--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
@@ -9,58 +9,86 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatButton
-    android:id="@+id/ConfirmButton"
+        android:id="@+id/ConfirmButton"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="420dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="350dp"
         android:background="@color/itemBlue"
         android:text="確認註冊"
-        android:gravity="center"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="400dp" />
+        android:textSize="18sp" />
 
     <androidx.appcompat.widget.AppCompatButton
     android:id="@+id/CancelButton"
         android:layout_width="200dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="470dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="300dp"
         android:text="取消"
-        android:gravity="center"
         android:textSize="18sp"
-        android:background="@color/itemBlue"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="460dp" />
+        android:background="@color/itemBlue" />
 
     <EditText
         android:id="@+id/NameInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="560dp"
         android:ems="10"
         android:inputType="text"
         android:text="姓名"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="200dp" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/AccountInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="500dp"
         android:ems="10"
         android:inputType="text"
         android:text="帳號"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="250dp" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/PasswordInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="440dp"
         android:ems="10"
         android:inputType="text"
         android:text="密碼"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="300dp" />
+        android:textSize="18sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
