--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,17 +62,18 @@
 
 
     <!-- 0806 -->
+
+    <!-- 0807 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/fish_gif"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/fish_gif"
+        android:src="@drawable/made_fish"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <!-- 0807 -->
     <Button
         android:id="@+id/addFish"
         style="@style/TextAppearance.AppCompat.Widget.Button"
