--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,37 @@
     <include
         layout="@layout/toolbar"/>
 
+    <!-- 0813 -->
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/barrel_gif"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:src="@drawable/barrel_1"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="50dp" />
+
+    <!-- 0813 -->
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/seaweed_gif"
+        android:layout_width="300dp"
+        android:layout_height="450dp"
+        android:src="@drawable/seaweed_1"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="350dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="-80dp" />
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/seaweed_gif_2"
+        android:layout_width="300dp"
+        android:layout_height="450dp"
+        android:src="@drawable/seaweed_1"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="400dp"
+        android:layout_marginEnd="-30dp"
+        android:layout_marginBottom="-100dp" />
+
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -84,28 +115,6 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <!-- 0813 -->
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/seaweed_gif"
-        android:layout_width="300dp"
-        android:layout_height="450dp"
-        android:src="@drawable/seaweed_2"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="400dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="-80dp" />
-
-    <!-- 0813 -->
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/barrel_gif"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:src="@drawable/barrel_2"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="0dp" />
 
 
 </RelativeLayout>
