--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,13 +95,12 @@
     <!-- 0806 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/fish_gif"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/fish_1"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="200dp" />
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginBottom="200dp"
+        android:src="@drawable/fish_3" />
 
     <!-- 0807 -->
     <Button
