--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,24 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="150dp"
         android:layout_marginBottom="200dp"
-        android:src="@drawable/fish_3" />
+        android:src="@drawable/blue_fish" />
+    <!-- 0821 -->
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/fish_gif_2"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginBottom="200dp"
+        android:src="@drawable/blue_fish" />
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/bw_fish"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="400dp"
+        android:layout_marginBottom="200dp"
+        android:src="@drawable/black_white_fish" />
 
     <!-- 0807 -->
     <Button
