--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Aquarium" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.Aquarium" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/mainBlue</item>
     </style>
 
