--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
         android:src="@drawable/blue_fish"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:autoStart="true"
+        android:autoStart="false"
         android:autoMirrored="true"
         android:repeatCount="-1" />
             <!-- repeat as long as it is displayed (once start() is called) -->
