2023 10 24 activity_main 調整畫面部分參數
login_page/register_page
將EditText做優化
登入畫面新增取消按鈕

嘗試建立timer 還未能正式使用

--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -40,6 +40,22 @@
         android:text="註冊"
         android:textSize="18sp" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/CancelButton"
+        android:layout_width="200sp"
+        android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="490dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="220dp"
+        android:background="@color/itemBlue"
+        android:text="取消"
+        android:textSize="18sp" />
+
     <EditText
         android:id="@+id/AccountInput"
         android:layout_width="250dp"
@@ -54,7 +70,7 @@
         android:layout_marginBottom="490dp"
         android:ems="10"
         android:inputType="text"
-        android:text="帳號"
+        android:hint="帳號"
         android:textSize="18sp" />
 
     <EditText
@@ -70,8 +86,9 @@
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="440dp"
         android:ems="10"
-        android:inputType="text"
-        android:text="密碼"
-        android:textSize="18sp" />
+        android:inputType="textPassword"
+        android:hint="密碼"
+        android:textSize="18sp"
+        />
 
 </RelativeLayout>
