--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="mainBlue">#FF169FAA</color>
     <color name="itemBlue">#FF03A9F4</color>
     <color name="iconBlue">#FF064A78</color>
+    <color name="lavender">#8692f7</color>
 </resources>
