--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
@@ -9,9 +8,6 @@
     android:background="@color/mainBlue"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <!-- Add your child views or layouts here -->
-
-
 
 
     <!-- 0813 -->
@@ -54,14 +50,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="580dp"
         android:layout_marginEnd="270dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="60dp"
         android:background="@color/itemBlue"
         app:layout_constraintTop_toTopOf="@+id/imageButton"
-        app:srcCompat="@drawable/ic_edit"
-        android:contentDescription="This button performs a specific action"
-        />
+        app:srcCompat="@drawable/ic_edit" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -72,12 +66,11 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="165dp"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="580dp"
         android:layout_marginEnd="165dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="60dp"
         android:background="@color/itemBlue"
-        app:srcCompat="@drawable/ic_feed"
-        android:contentDescription="This button performs a specific action" />
+        app:srcCompat="@drawable/ic_feed" />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -88,13 +81,11 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="270dp"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="580dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="60dp"
         android:background="@color/itemBlue"
-        app:srcCompat="@drawable/ic_share"
-        android:contentDescription="This button performs a specific action"
-        />
+        app:srcCompat="@drawable/ic_share" />
 
 
 
