--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/mainBlue"
     tools:context=".AboutFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,5 +15,7 @@
         android:textSize="30sp"
         android:layout_centerInParent="true"
         android:textColor="@color/lavender"/>
+
+
 
 </RelativeLayout>
