1026 先存一下好了 不然等一下找不回來:( - 還有問題沒解決： 1. HomeFragment.java 不能同時extends Fragment和AppCompatActivity 2. HomeFragment.java 不能用findViewById（因為沒有extends AppCompatActivity）
:(((((((

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/mainBlue"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".HomeFragment">
 
 
     <!-- 0813 -->
