--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,6 +10,7 @@
         android:padding="14dp">
 
         <ImageButton
+            android:id="@+id/menu"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
