1026_2 目前可以跑、可以用旁邊的menu到其他頁面 但是主畫面的按鈕不能用:((( （包在inner class裡，結果沒跑它直接跳過去？？？） （大概就是跟註解掉差不多意思==）
-----

總結這兩天改的：
1. 把原本在MainActivity.java的程式碼移到HomeFragment.java，MainActivity.java裡面寫的是menu的程式碼
2. 把沒用到的MainActivity2.java和activity_main2.xml刪掉（AndroidManifest.xml裡有提到的地方也刪掉了）
3. 把所有名字叫”Settings”的改成”Timer”、叫”Sharing”的改成”Calendar"；也改了nav_menu所以側邊欄的名字也改了但圖案還沒改

-----

提醒自己：
＊把沒用到的.gif等都刪掉
＊用for loop創魚？！
＊把周謙皓的timer程式碼抓下來看看

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -15,12 +15,12 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/nav_settings"
-            android:title="Settings"/>
+            android:title="Timer"/>
 
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/nav_share"
-            android:title="Share"/>
+            android:title="Calendar"/>
 
         <item
             android:id="@+id/nav_about"
