--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="itemBlue">#FF03A9F4</color>
     <color name="iconBlue">#FF064A78</color>
     <color name="lavender">#8692f7</color>
+    <color name="gray">#888</color>
+    <color name="blue">#0000FF</color>
 </resources>
