--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
     tools:context=".HomeFragment">
 
 
-    <!-- 0813 -->
+    <!-- 0813 背景裝飾：木桶 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/barrel_gif"
         android:layout_width="200dp"
@@ -20,8 +20,7 @@
         android:layout_marginTop="450dp"
         android:layout_marginEnd="250dp"
         android:layout_marginBottom="50dp" />
-
-    <!-- 0813 -->
+    <!-- 0813 背景裝飾：海草1 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/seaweed_gif"
         android:layout_width="300dp"
@@ -31,6 +30,7 @@
         android:layout_marginTop="350dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="-80dp" />
+    <!-- 0813 背景裝飾：海草2 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/seaweed_gif_2"
         android:layout_width="300dp"
@@ -41,6 +41,9 @@
         android:layout_marginEnd="-30dp"
         android:layout_marginBottom="-100dp" />
 
+
+
+    <!-- 左邊按鈕 -->
     <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="60dp"
@@ -56,7 +59,7 @@
         android:background="@color/itemBlue"
         app:layout_constraintTop_toTopOf="@+id/imageButton"
         app:srcCompat="@drawable/ic_edit" />
-
+    <!-- 中間按鈕 -->
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="60dp"
@@ -71,7 +74,7 @@
         android:layout_marginBottom="60dp"
         android:background="@color/itemBlue"
         app:srcCompat="@drawable/ic_feed" />
-
+    <!-- 右邊按鈕 -->
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="60dp"
@@ -89,7 +92,7 @@
 
 
 
-    <!-- 0806 -->
+    <!-- 0806 固定游動的藍魚1 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/fish_gif"
         android:layout_width="match_parent"
@@ -98,7 +101,7 @@
         android:layout_marginTop="150dp"
         android:layout_marginBottom="200dp"
         android:src="@drawable/blue_fish" />
-    <!-- 0821 -->
+    <!-- 0821 固定游動的藍魚2 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/fish_gif_2"
         android:layout_width="match_parent"
@@ -107,6 +110,7 @@
         android:layout_marginTop="300dp"
         android:layout_marginBottom="200dp"
         android:src="@drawable/blue_fish" />
+    <!-- 0821 固定游動的黑白魚1 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/bw_fish"
         android:layout_width="match_parent"
@@ -115,7 +119,7 @@
         android:layout_marginTop="400dp"
         android:layout_marginBottom="200dp"
         android:src="@drawable/black_white_fish" />
-    <!-- 0827 -->
+    <!-- 0827 固定游動的黑白魚2 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/bw_fish_2"
         android:layout_width="match_parent"
@@ -125,23 +129,9 @@
         android:layout_marginBottom="380dp"
         android:src="@drawable/black_white_fish" />
 
-    <!-- 0807 -->
-    <Button
-        android:id="@+id/addFish"
-        style="@style/TextAppearance.AppCompat.Widget.Button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:padding="3dp"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- 0930 -->
+
+    <!-- 0930 事先寫好之後再呼叫的藍魚 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/blue_fish_0"
         android:src="@drawable/blue_fish"
@@ -151,9 +141,7 @@
         android:autoMirrored="true"
         android:repeatCount="-1"
         android:visible="false" />
-
-    <!-- repeatCount=-1: repeat as long as it is displayed (once start() is called) -->
-    <!-- 1009: set visibility -->
-
+            <!-- repeatCount=-1: repeat as long as it is displayed (once start() is called) -->
+            <!-- 1009: set visibility -->
 
 </RelativeLayout>
