--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -40,18 +40,25 @@
         android:text="註冊"
         android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="217dp"
-        android:text="帳號："
-        android:textColor="@android:color/black"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/CancelButton"
+        android:layout_width="200sp"
+        android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="490dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="220dp"
+        android:background="@color/itemBlue"
+        android:text="取消"
         android:textSize="18sp" />
 
     <EditText
         android:id="@+id/AccountInput"
-        android:layout_width="150dp"
+        android:layout_width="250dp"
         android:layout_height="45dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -63,19 +70,9 @@
         android:layout_marginBottom="490dp"
         android:ems="10"
         android:inputType="text"
-        android:text=""
+        android:hint="帳號"
         android:textSize="18sp" />
 
-
-    <TextView
-        android:id="@+id/accountLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="密碼："
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="267dp"/>
     <EditText
         android:id="@+id/PasswordInput"
         android:layout_width="250dp"
@@ -89,8 +86,9 @@
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="440dp"
         android:ems="10"
-        android:inputType="text"
-        android:text=""
-        android:textSize="18sp" />
+        android:inputType="textPassword"
+        android:hint="密碼"
+        android:textSize="18sp"
+        />
 
 </RelativeLayout>
